# dmgr

./: Cargo.toml  README.md
src/: args.rs  config.rs  constants.rs  input.rs  logging.rs  macros.rs  main.rs  router.rs  runner.rs  service.rs
src/command/: list.rs  mod.rs  register.rs  start.rs  stop.rs
